[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "start_game"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Break them bricks!"
align = 1
autowrap = true

[node name="NextLevelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.5
margin_top = -300.0
margin_right = 121.5
margin_bottom = -200.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Next =>"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -200.0
margin_right = 79.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="NextLevelButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
